--- a/class-04/code-review/index.html
+++ b/class-04/code-review/index.html
@@ -1,20 +1,48 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>The Gallery of Horns</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <script id="DDA-template" type="text/x-handlebars-template">
+    <section class="card" data-horns="{{horns}}" data-keyword="{{keyword}}">
+      <h2>{{title}}</h2>
+      <img
+        src="{{imageUrl}}"
+        alt="{{title}}">
+      <p>{{description}}</p>
+    </section>
+  </script>
+
+  <script id="DDA-option-template" type="text/x-handlebars-template">
+    <option value="{{keyword}}">{{keyword}}</option>
+  </script>
+
+  <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+
+<body>
     <header>
-      <h1>The Gallery of Horns</h1>
-      <select>
+        <h1>The Gallery of Horns</h1>
+        <select>
         <option value="default">Filter by Keyword</option>
-      </select>
+        </select>
+        <button>page-1</button>
+        <button>page-2</button>
+        <p class="big">sort by name</p>
     </header>
-    <main>
+    <main class="deck">
+        
     </main>
     <footer>
-      &copy; 2018 Code Fellows
+        &copy; 2018 Code Fellows
     </footer>
-  </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.1/handlebars.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="app.js"></script>
+</body>
+
 </html>
+
+<!--  -->
