--- a/class-00/lab-c/starter-code/index.html
+++ b/class-00/lab-c/starter-code/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <title>Choco Pizza</title>
   <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" type="text/css" href="base.css">
-  <link rel="stylesheet" type="text/css" href="layout.css">
-  <link rel="stylesheet" type=text/css href="module.css">
+  <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="styles/layout.css">
+  <link rel="stylesheet" href="styles/module.css">
 </head>
 
 <body>
